# Private1

./: AddEditNotePage.qml  Block.qml  CMakeLists.txt  EditPage.qml  Images.qrc  Main.qml  Main.qml.autosave  MainPage.qml  Page1.qml  Page2.qml  Page3.qml  Page4.qml  PageWithZoom.qml  Page_green.qml  Page_red.qml  Page_start.qml  Page_yellow.qml  README.md  ViewNotePage.qml  main.cpp  resources.qrc
